Mon Aug 27 19:10:50 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* ext/etc/etc.c (etc_getlogin): update documentation to note
	  security issue.  [ruby-Bugs-11821]

Mon Aug 27 15:56:48 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (sym_encoding): return the encoding of a Symbol.

Mon Aug 27 15:33:10 2007  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* util.c (IEEE_BIG_ENDIAN): use configured value.  [ruby-dev:31623]

	* util.c (Llong): set to LONG_LONG if available.

Mon Aug 27 13:11:56 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* string.c (tr_trans): wrong condition for mbmaxlen==1 strings.
	  [ruby-dev:31652]

Mon Aug 27 00:41:13 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* io.c (rb_io_each_byte): caused infinite loop.  [ruby-dev:31652]

	* io.c (rb_io_getc): should return nil at EOF, not EOFError.

	* lib/delegate.rb (SimpleDelegator::__setobj__): use raise
	  argument to specify backtrace.

	* test/ruby/test_fnmatch.rb (TestFnmatch::bracket_test):
	  String#include? no longer works for Fixnum.  use #chr.
	  [ruby-dev:31652]

Sun Aug 26 12:27:14 2007  Koichi Sasada  <ko1@atdot.net>

	* cont.c: fix to remove Fiber.new until fiber.so is not loaded.

	* test/ruby/test_continuation.rb: fix to use resume.

Sun Aug 26 06:51:46 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_wc2mb, reg_enum_key): allocate 
	  buffer should be NULL terminated.

Sun Aug 26 06:04:13 2007  Koichi Sasada  <ko1@atdot.net>

	* insnhelper.ci (vm_setup_method): reorder code for branch prediction.

Sun Aug 26 05:54:49 2007  Koichi Sasada  <ko1@atdot.net>

	* insnhelper.ci (vm_call_method): fix to relaxant safe level check
	  ($SAFE > 2).  [ruby-core:11998]

	* bootstraptest/test_method.rb: add tests for above.

Sun Aug 26 05:52:08 2007  Koichi Sasada  <ko1@atdot.net>

	* test/ruby/test_fiber.rb: fix to require 'continuation'.

Sat Aug 25 23:52:14 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>
