@@ -37,10 +37,6 @@ if defined?(WIN32OLE_TYPE)
       assert_equal(ole_type.ole_type, ole_type2.ole_type)
       assert_equal(ole_type.guid, ole_type2.guid)
       assert_equal(ole_type.progid, ole_type2.progid)
-      assert_equal(ole_type.name, ole_type2.name)
-      assert_equal(ole_type.ole_type, ole_type2.ole_type)
-      assert_equal(ole_type.guid, ole_type2.guid)
-      assert_equal(ole_type.progid, ole_type2.progid)
       assert_equal(ole_type.visible?, ole_type2.visible?)
       assert_equal(ole_type.to_s, ole_type2.to_s)
       assert_equal(ole_type.major_version, ole_type2.major_version)
