@@ -1,3 +1,11 @@
+Mon Aug 27 20:27:59 2007  Masaki Suketa  <masaki.suketa@nifty.ne.jp>
+
+	* ext/win32ole/win32ole.c (ole_type_progid): fix the bug.
+	  [ruby-dev:31576]
+
+	* test/win32ole/test_win32ole_type.rb (test_initialize):
+	  remove duplicate assertions.
+
 Mon Aug 27 19:10:50 2007  Yukihiro Matsumoto  <matz@ruby-lang.org>
 
 	* ext/etc/etc.c (etc_getlogin): update documentation to note
